SERVER-20949 thread params object to AsyncResultsMerger by rvalue reference